examples/datalog/21_query_features/14_nested_query.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_nested
Knowledge graph 'test_nested' created.
Switched to knowledge graph: test_nested
> .kg use test_nested
Switched to knowledge graph: test_nested
> +sales[(1, "North", 100), (2, "South", 200), (3, "North", 150), (4, "South", 50)].
Inserted 4 fact(s) into 'sales'.
> +regional_total(Region, <SUM:Amount>) :- sales(_, Region, Amount).
Script error: Parse error: Invalid term: '<SUM:Amount>'
